--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
          </select>   
         
           <!--description-->
-         <h5>US conducts export trade with more than 200 countries around the world. Each state has a different export trade profile. <br><br> Arcs indicate a trade relationship exists between a state and a country. Redder and thicker lines indicate more trade whereas bluer thin lines indicate less trade. <br><br> A joint data product of the </h5>
+         <h5>US conducts export trade with more than 200 countries around the world. Each state has a different export trade profile. <br><br> Arcs indicate a trade relationship exists between a state and a country. Redder and thicker lines indicate more trade whereas bluer thin lines indicate less trade. <br><br>  </h5>
      </div>
         
 <!--d3 code starts heree-->      
