--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
  <script type="text/javascript"> 
     
     //Dimensions of frame
-    var w = innerWidth,
+    var w = 400,
         h = innerHeight;
 
     //Boolean for great circles calculation
